--- a/index.html
+++ b/index.html
@@ -1,46 +1,55 @@
-<!DOCTYPE html>
-<html lang='ja'>
-<head>
-  <meta charset='utf-8'>
-  <title>WEB実験</title>
-  <meta property="og:title" content="たいとる">
-  <meta property="og:description" content="せつめいせつめい">
-  <meta name="theme-color" content="#ECECF7">
-  <meta name="msapplication-TileColor" content="#ECECF7">
-  <link rel="icon" type="image/png" xhref="icon.png">
-  <link rel="apple-touch-icon" xhref="icon.png">
-  <meta name="msapplication-square310x310logo" xcontent="icon.png">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:image" content="https://yourdomain/ogp.jpg">
-  <meta name="twitter:image" content="https://yourdomain/ogp.jpg">
+<!DOCTYPE html> 
+<html lang="ja"> 
+<head> 
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>aRu.txt</title> 
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
+    <link rel="apple-touch-icon" href="apple-touch-icon-180x180.png" sizes="180x180"> 
+    <link rel="icon" type="image/png" href="android-chrome-192x192.png" sizes="192x192"> 
+</head> 
+<body class="page-template page-template-single-photo page-template-single-photo-php page page-id-8917 custom-background wp-featherlight-captions left-sidebar left-menu-open"> 
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="format-detection" content="telephone=no">
+    <div id="fb-root" class="fb_reset"></div> 
 
-  <link rel="stylesheet" href="index.css">
-</head>
-<body>
-  <div class=header>
-    <h1>私のホームページ</h1>
-    <div>せつめいはまだない。</div>
-  </div>
-  <div class=main>
-    <div>
-      <h2>部活動</h2>
-      <div>
-        プログラミング研究会,総合芸術部
-      </div>
-    </div>
+    <div id="page" class="grid w960"> 
+        <header id="header" class="row" role="banner"> 
+            <div class="c12"> 
+                <div id="mobile-menu"> 
+                    <a href="#" class="left-menu"><i class="icon-reorder"></i></a> 
+                    <a href="#"><i class="icon-search"></i></a> 
+                </div> 
+                <div id="drop-down-search" style="display: none;">
+                    <form role="search" method="get" id="searchform" class="slide" action=""> 
+                        <label class="assistive-text" for="site-search">Search for:</label> 
+                        <input type="search" placeholder="Search…" value="" name="s" id="site-search"> 
+                    </form>
+                </div> 
 
-    <div>
-      <h2>趣味</h2>
-      <div>
-        読書
-      </div>
-    </div>
-  </div>
-  <div class=footer>
-    2024/07/17
-  </div>
-</body>
+                <div class="title-logo-wrapper"> 
+                    <div class="header-group"> 
+                        <h1 id="site-title">aRu.txt</h1> 
+                        <h2 id="site-description"></h2>
+                    </div> 
+                </div> 
+
+                <a><img id="header-img" src="header.jpg" width="900" height="300" alt="Header Image"></a> 
+            </div> 
+        </header> 
+
+        <div id="main" class="row"> 
+            <div id="left-nav"></div> 
+
+            <div id="primary" class="c9" style="float: right;" role="main"> 
+                <p class="blog_content">HPです。<br><br> 
+                    <img decoding="async" src="icon.jpg" alt="k1k" width="161" height="170" class="alignnone size-full wp-image-8924"><br> 
+                    アRu<br> 
+                    :<a target="_blank" href="https://x.com/arutarosan?s=21&t=MdyGmeIN8iI2gaUyEX-MWg" rel="noopener noreferrer">Twitter</a><br> 
+                    :<a target="_blank" href="https://bsky.app/profile/aruitoma.bsky.social" rel="noopener noreferrer">BlueSky</a><br> 
+                </p> 
+            </div> 
+        </div> 
+    </div> 
+
+</body> 
 </html>
