リンク追加

--- a/index.html
+++ b/index.html
@@ -51,5 +51,14 @@
         </div> 
     </div> 
 
+    <div>
+        <h3>Link</h3>
+        <div>
+            <a href="https://R-sick.github.io/web/diary.html">日記</a><br>
+            <a href="https://R-sick.github.io/web/studylog.html">勉強ろぐ</a><br>
+        </div>      
+      </div>    
+    </div>
+
 </body> 
 </html>
