--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
     </div> 
 
     <div>
+        <h3>aRuについて</h3>
+        <div>
+        kosen24s。文系の残滓<br>
+        </div>      
+    </div>
+
+
+    <div>
         <h3>Link</h3>
         <div>
             <a href="https://R-sick.github.io/web/diary.html">日記</a><br>
