--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
     <link rel="apple-touch-icon" href="apple-touch-icon-180x180.png" sizes="180x180"> 
     <link rel="icon" type="image/png" href="android-chrome-192x192.png" sizes="192x192"> 
+    <link rel="stylesheet" href="stylesheet.css">
 </head> 
 <body class="page-template page-template-single-photo page-template-single-photo-php page page-id-8917 custom-background wp-featherlight-captions left-sidebar left-menu-open"> 
 
@@ -29,6 +30,16 @@
                 <div class="title-logo-wrapper"> 
                     <div class="header-group"> 
                         <h1 id="site-title">aRu.txt</h1> 
+                        <p1>
+                            <a href="https://x.com/arutarosan?s=21&t=MdyGmeIN8iI2gaUyEX-MWg" class="button">
+                                <span>▶Twitter</span>
+                            </a>
+                        </p1>
+                        <p2>
+                            <a href="https://bsky.app/profile/aruitoma.bsky.social" class="button">
+                                <span>▶Bluesky</span>
+                            </a>
+                        </p2>
                         <h2 id="site-description"></h2>
                     </div> 
                 </div> 
@@ -40,11 +51,8 @@
         <div id="main" class="row"> 
             <div id="left-nav"></div> 
             <div id="primary" class="c9" style="float: right;" role="main"> 
-                <p class="blog_content">HPです。<br><br> 
+                <p class="blog_content">HP(試作)へようこそ!!<br><br> 
                     <img decoding="async" src="icon.jpg" alt="k1k" width="161" height="170" class="alignnone size-full wp-image-8924"><br> 
-                    アRu<br> 
-                    :<a target="_blank" href="https://x.com/arutarosan?s=21&t=MdyGmeIN8iI2gaUyEX-MWg" rel="noopener noreferrer">Twitter</a><br> 
-                    :<a target="_blank" href="https://bsky.app/profile/aruitoma.bsky.social" rel="noopener noreferrer">BlueSky</a><br> 
                 </p> 
             </div> 
         </div> 
