scssとhtmlの細かな変更

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon-180x180.png" sizes="180x180"> 
     <link rel="icon" type="image/png" href="android-chrome-192x192.png" sizes="192x192"> 
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head> 
 <body class="page-template page-template-single-photo page-template-single-photo-php page page-id-8917 custom-background wp-featherlight-captions left-sidebar left-menu-open"> 
 
@@ -31,12 +32,12 @@
                     <div class="header-group"> 
                         <h1 id="site-title">aRu.txt</h1> 
                         <p1>
-                            <a href="https://x.com/arutarosan?s=21&t=MdyGmeIN8iI2gaUyEX-MWg" class="button">
+                            <a href="https://x.com/arutarosan?s=21&t=MdyGmeIN8iI2gaUyEX-MWg" class="button_t1">
                                 <span>▶Twitter</span>
                             </a>
                         </p1>
                         <p2>
-                            <a href="https://bsky.app/profile/aruitoma.bsky.social" class="button">
+                            <a href="https://bsky.app/profile/aruitoma.bsky.social" class="button_t1">
                                 <span>▶Bluesky</span>
                             </a>
                         </p2>
@@ -44,33 +45,38 @@
                     </div> 
                 </div> 
 
-                <a><img id="header-img" src="header.jpg" width="900" height="300" alt="Header Image"></a> 
+                <a class="header-image"><img id="header-img" src="header.jpg" width="900" height="300" alt="Header Image"></a> 
             </div> 
         </header> 
 
         <div id="main" class="row"> 
             <div id="left-nav"></div> 
-            <div id="primary" class="c9" style="float: right;" role="main"> 
-                <p class="blog_content">HP(試作)へようこそ!!<br><br> 
-                    <img decoding="async" src="icon.jpg" alt="k1k" width="161" height="170" class="alignnone size-full wp-image-8924"><br> 
-                </p> 
-            </div> 
+            <div id="primary" class="c9" style="float: right;" role="main"></div> 
         </div> 
     </div> 
 
     <div>
-        <h3>aRuについて</h3>
-        <div>
-        kosen24s。文系の残滓<br>
-        </div>      
+        <h3>*aRuについて</h3>
+        <div>kosen24s。文系の残滓<br><br><br></div>
+        <p class="blog_content">「HP.sampleへようこそ!!」<br><br> 
+            <img decoding="async" src="icon.jpg" alt="k1k" width="161" height="170" class="icon-image"><br> 
+        </p>       
     </div>
 
 
     <div>
-        <h3>Link</h3>
+        <h3>*Link(仮)</h3>
         <div>
-            <a href="https://R-sick.github.io/web/diary.html">日記</a><br>
-            <a href="https://R-sick.github.io/web/studylog.html">勉強ろぐ</a><br>
+            <p1>
+                <a href="https://R-sick.github.io/web/diary.html" class="button_t2">
+                    <span>日記</span>
+                </a>
+            </p1>
+            <p2>
+                <a href="https://R-sick.github.io/web/studylog.html"class="button_t2">
+                    <span>勉強ろぐ</span>
+                </a>
+            </p2>
         </div>      
       </div>    
     </div>
