--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                         <h1 id="site-title">aRu.txt</h1> 
                         <p1>
                             <a href="https://x.com/arutarosan?s=21&t=MdyGmeIN8iI2gaUyEX-MWg" class="button_t1">
-                                <span>▶Twitter</span>
+                                <span>Twitter</span>
                             </a>
                         </p1>
                         <p2>
                             <a href="https://bsky.app/profile/aruitoma.bsky.social" class="button_t1">
-                                <span>▶Bluesky</span>
+                                <span>Bluesky</span>
                             </a>
                         </p2>
                         <h2 id="site-description"></h2>
