--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>aRu.txt</title> 
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
-    <link rel="apple-touch-icon" href="apple-touch-icon-180x180.png" sizes="180x180"> 
-    <link rel="icon" type="image/png" href="android-chrome-192x192.png" sizes="192x192"> 
+    <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon"> 
+    <link rel="apple-touch-icon" href="icon/apple-touch-icon-180x180.png" sizes="180x180"> 
+    <link rel="icon" type="image/png" href="icon/android-chrome-192x192.png" sizes="192x192"> 
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="layout.css"> <!-- 追加 -->
 </head> 
 <body class="page-template page-template-single-photo page-template-single-photo-php page page-id-8917 custom-background wp-featherlight-captions left-sidebar left-menu-open"> 
 
@@ -45,7 +46,7 @@
                     </div> 
                 </div> 
 
-                <a class="header-image"><img id="header-img" src="header.jpg" width="900" height="300" alt="Header Image"></a> 
+                <a class="header-image"><img id="header-img" src="icon/header.jpg" width="900" height="300" alt="Header Image"></a> 
             </div> 
         </header> 
 
@@ -57,9 +58,10 @@
 
     <div>
         <h3>*aRuについて</h3>
-        <div>kosen24s。文系の残滓<br><br><br></div>
+        <div>kosen24s。文系の残滓<br></div>
+        <div>言語学と数学に興味があるよ。<br><br><br></div>
         <p class="blog_content">「HP.sampleへようこそ!!」<br><br> 
-            <img decoding="async" src="icon.jpg" alt="k1k" width="161" height="170" class="icon-image"><br> 
+            <img decoding="async" src="icon/icon.jpg" alt="k1k" width="161" height="170" class="icon-image"><br> 
         </p>       
     </div>
 
@@ -73,7 +75,7 @@
                 </a>
             </p1>
             <p2>
-                <a href="https://R-sick.github.io/web/studylog.html"class="button_t2">
+                <a href="studylog.html" class="button_t2">
                     <span>勉強ろぐ</span>
                 </a>
             </p2>
