--- a/studylog.html
+++ b/studylog.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>勉強ろぐ</title>
+    <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon"> 
+    <link rel="apple-touch-icon" href="icon/apple-touch-icon-180x180.png" sizes="180x180"> 
+    <link rel="icon" type="image/png" href="icon/android-chrome-192x192.png" sizes="192x192"> 
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="layout.css"> 
 </head>
 <body>
-    
+    <div>
+        <h1>定期テストの勉強</h1>
+        <div>国語<br><br></div> 
+        <a href="https://tomarurx.github.io/allstudy/" class="button_t1">文豪紹介</a>
+    </div>
+    <div style="position: fixed; bottom: 20px; left: 0; width: 100%; text-align: center; z-index: 100;">
+        <a href="https://tomarurx.github.io/aRuHP/" class="button_t1">戻る</a>
+    </div>
 </body>
 </html>
